fixed prefs btns to center on mobile

--- a/browser/scss/meals/main.scss
+++ b/browser/scss/meals/main.scss
@@ -51,7 +51,7 @@
         md-card-actions {
             background-color: $theme-yellow;
             @media all and (min-width: 600px) {
-                margin-left: 2vw;
+                margin-left: 5vw;
             }
             @media all and (max-width: 599px) {
                 margin-left: 40vw;
