--- a/browser/scss/user-prefs/main.scss
+++ b/browser/scss/user-prefs/main.scss
@@ -9,6 +9,7 @@
     }
     .dietary {
         flex-wrap: wrap;
+        justify-content: center;
         .md-button {
             display: flex;
             flex-direction: column;
